# cross-asset-derivatives-intelligence

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: 01-foundation-and-data-contracts.md  02-ingestion-and-storage.md  03-analytics-and-evidence.md
.github/workflows/: test.yml
.streamlit/: config.toml
configs/: assets.yaml  cftc_contracts.yaml  data_sources.yaml  indicators.yaml  report_settings.yaml  signal_thresholds.yaml
dashboard/: __init__.py
dashboard/components/: __init__.py  cards.py  charts.py  empty_states.py  evidence.py  freshness.py  layout.py  regime.py  signals.py  styles.py
dashboard/pages/: cross_asset.py  data_freshness.py  liquidity.py  macro_regime.py  macro_snapshot.py  market_overview.py  market_summary.py  methodology.py  options.py  positioning.py  screener.py
docs/: architecture.md  cftc_methodology.md  data_dictionary.md  data_sources.md  gamma_methodology.md  limitations.md  liquidity_proxy_methodology.md  options_methodology.md  product_requirements.md  roadmap.md  screener_methodology.md
scripts/: generate_report.py  ingest_data.py  initialize_database.py  run_analytics.py
src/analytics/: macro_regime.py
src/cross_asset_intelligence/: __init__.py
src/data/: fred_client.py
tests/: test_common_schemas.py  test_macro_regime.py  test_provider_interface.py
tests/calculation/: test_market_liquidity_screener.py  test_options_analytics.py  test_phase3_calculations.py  test_positioning_extended.py
tests/data_quality/: test_phase3_cftc.py
tests/fixtures/: sample_records.py
(+78 files in other folders)
